maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:7: error: not found: value random3
     	n=random3()
          ^